[package]
name = "reminder"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rusqlite]
version = "0.25.3"
features = ["bundled"]

[dependencies]
clap = "3.0.0-beta.4"
chrono = "0.4.19"
cli_table = {git = "https://github.com/Warhorst/cli_table.git"}
